--- a/src/pages/login/login.less
+++ b/src/pages/login/login.less
@@ -1,17 +1,35 @@
 .login{
     width: 100%;
     height: 100%;
-    background-image: url();
-    background-size: 100% 100%;
-    .head{
-        height: 80px;
-        background-color: blue;
-        img{
-            width: 40px;
-            height: 40px;
+    display: flex;
+    background-image: url('./image/back.png');
+    .LoginLog{
+        width: 50%;
+        height: 100%;
+        .logImage{
+            width: 100%;
+            height: 100%;
+            background-image: url('./image/loginLog.png');
         }
     }
-    .content{
-
+    .loginForm{
+        width: 30%;
+        height: 100%;
+        padding-top: 20%;
+        .FormTitle{
+            padding: 10px;
+            background-color: white;
+            color: black;
+            width: 100%;
+            text-align: left;
+            span{
+                color: black;
+            }
+        }
+        form{
+            padding: 10px;
+            background-color: white;
+            margin: auto;
+        }
     }
 }
