--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -5,3 +5,12 @@
 .threeEcharts{
     display: flex;
 }
+.autoDiv{
+    display: flex;
+    .homeImg{
+        width: 20px;
+        height: 20px;
+        background-image: url('./image/tu.jpg');
+        background-size: 20px 20px;
+    }
+}
