--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -8,9 +8,19 @@
 .autoDiv{
     display: flex;
     .homeImg{
-        width: 20px;
-        height: 20px;
+        width: 40px;
+        height: 40px;
         background-image: url('./image/tu.jpg');
-        background-size: 20px 20px;
+        background-size: 40px 40px;
+    }
+    .homeImgRight{
+        margin-right: auto;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        p{
+            width: 100%;
+        }
     }
 }
